# framevpn

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  celery.py  config.py  conftest.py  database.py  init_data.py  main.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 3ea4da90d033_add_private_and_public_keys_columns_to_.py  91979b40eb38_create_users_table.py  d6bad04647c0_add_on_down_column_to_wireguard_.py  ea7de0b64f3e_added_wireguard_tables.py
backend/app/: initial_data.py
backend/app/core/: config.py  security.py
backend/auth/: crud.py  dependencies.py  security.py  services.py  views.py
backend/generic/: command.py  db_types.py  errors.py
backend/initial_setup/: dependencies.py  schemas.py  utils.py  views.py
backend/network/: schemas.py  utils.py  views.py
backend/network/services/: interfaces.py
backend/user/: models.py  schemas.py  views.py
backend/wireguard/: models.py  schemas.py  utils.py  views.py
backend/wireguard/api/v1/schemas/: clients.py  wireguard.py
backend/wireguard/api/v1/views/: clients.py  wireguard.py
backend/wireguard/services/: client.py  server.py  wireguard.py
frontend/: .eslintrc.js  package.json
frontend/src/: Routes.tsx  index.tsx  store.ts
frontend/src/auth/: Login.tsx  services.ts
frontend/src/clients/: AddClient.tsx  DetailClient.tsx  ListClients.tsx  services.ts  types.ts
frontend/src/config/: index.tsx
frontend/src/core/: services.ts
frontend/src/dashboard/: pageTitleSlice.ts
frontend/src/initialSetup/: services.ts  (+1 more)
nginx/: nginx.conf
(+33 files in other folders)
